bootstrap/0.5.0-compiler/src/src/clyth_antlr_files/ClythV1Parser.cpp

// Generated from ClythV1.g4 by ANTLR 4.13.2


#include "ClythV1Listener.h"
#include "ClythV1Visitor.h"

#include "ClythV1Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ClythV1ParserStaticData final {
  ClythV1ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ClythV1ParserStaticData(const ClythV1ParserStaticData&) = delete;
  ClythV1ParserStaticData(ClythV1ParserStaticData&&) = delete;
  ClythV1ParserStaticData& operator=(const ClythV1ParserStaticData&) = delete;
  ClythV1ParserStaticData& operator=(ClythV1ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag clythv1ParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<ClythV1ParserStaticData> clythv1ParserStaticData = nullptr;

void clythv1ParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (clythv1ParserStaticData != nullptr) {
    return;
  }
#else
  assert(clythv1ParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ClythV1ParserStaticData>(
    std::vector<std::string>{
      "program", "topLevelItem", "includeDecl", "includeTarget", "externDecl", 
      "externAbi", "externParamList", "externParam", "structDecl", "genericParamList", 
      "structField", "visibilityModifier", "methodBlock", "methodDecl", 
      "methodSimpleName", "functionDecl", "paramList", "param", "block", 
      "statement", "varDecl", "assignmentStmt", "assignable", "assignmentOp", 
      "exprStmt", "returnStmt", "ifStmt", "elseClause", "whileStmt", "forStmt", 
      "forEachHeader", "forEachBinding", "forEachVar", "forClassicHeader", 
      "forInit", "varDeclNoSemi", "assignmentNoSemi", "breakStmt", "continueStmt", 
      "meccBlock", "parenExpr", "expression", "logicalOr", "logicalAnd", 
      "equality", "relation", "comparison", "additive", "multiplicative", 
      "unary", "postfix", "postfixSuffix", "primary", "lambdaExpression", 
      "lambdaParamList", "lambdaParam", "argumentList", "literal", "collectionLiteral", 
      "listLiteral", "curlyLiteral", "curlyEntryList", "curlyEntry", "expressionList", 
      "type", "fixedArrayType", "dynamicArrayType", "functionType", "functionParamTypeList", 
      "genericType", "genericArgList", "typeAtom", "baseType", "commaOrSemi"
    },
    std::vector<std::string>{
      "", "'include'", "'extern'", "'C'", "'public'", "'private'", "'struct'", 
      "'function'", "'mecc'", "'constructor'", "'destructor'", "'if'", "'else'", 
      "'for'", "'while'", "'return'", "'break'", "'continue'", "'is'", "'in'", 
      "'not'", "", "'null'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
      "':'", "';'", "'.'", "'||'", "'&&'", "'=='", "'!='", "'>='", "'<='", 
      "'>'", "'<'", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='", 
      "'=>'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'~'", "'&'", 
      "'...'"
    },
    std::vector<std::string>{
      "", "INCLUDE", "EXTERN", "C_ABI", "PUBLIC", "PRIVATE", "STRUCT", "FUNCTION", 
      "MECC", "CONSTRUCTOR", "DESTRUCTOR", "IF", "ELSE", "FOR", "WHILE", 
      "RETURN", "BREAK", "CONTINUE", "IS", "IN", "NOT", "BOOLEAN_LITERAL", 
      "NULL_LITERAL", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
      "RBRACKET", "COMMA", "COLON", "SEMI", "DOT", "OR", "AND", "EQ", "NEQ", 
      "GTE", "LTE", "GT", "LT", "INCREMENT", "DECREMENT", "PLUS_ASSIGN", 
      "MINUS_ASSIGN", "STAR_ASSIGN", "SLASH_ASSIGN", "PERCENT_ASSIGN", "ARROW", 
      "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "BANG", "TILDE", 
      "AMP", "VARARGS", "BUILTIN_TYPE", "NUMERIC_LITERAL", "TEMPLATE_STRING_LITERAL", 
      "STRING_LITERAL", "IDENTIFIER", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", 
      "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  clythv1ParserStaticData = std::move(staticData);
}

}

ClythV1Parser::ClythV1Parser(TokenStream *input) : ClythV1Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ClythV1Parser::ClythV1Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ClythV1Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *clythv1ParserStaticData->atn, clythv1ParserStaticData->decisionToDFA, clythv1ParserStaticData->sharedContextCache, options);
}

ClythV1Parser::~ClythV1Parser() {
  delete _interpreter;
}

const atn::ATN& ClythV1Parser::getATN() const {
  return *clythv1ParserStaticData->atn;
}

std::string ClythV1Parser::getGrammarFileName() const {
  return "ClythV1.g4";
}

const std::vector<std::string>& ClythV1Parser::getRuleNames() const {
  return clythv1ParserStaticData->ruleNames;
}

const dfa::Vocabulary& ClythV1Parser::getVocabulary() const {
  return clythv1ParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ClythV1Parser::getSerializedATN() const {
  return clythv1ParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ClythV1Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ClythV1Parser::ProgramContext::EOF() {
  return getToken(ClythV1Parser::EOF, 0);
}

std::vector<ClythV1Parser::TopLevelItemContext *> ClythV1Parser::ProgramContext::topLevelItem() {
  return getRuleContexts<ClythV1Parser::TopLevelItemContext>();
}

ClythV1Parser::TopLevelItemContext* ClythV1Parser::ProgramContext::topLevelItem(size_t i) {
  return getRuleContext<ClythV1Parser::TopLevelItemContext>(i);
}


size_t ClythV1Parser::ProgramContext::getRuleIndex() const {
  return ClythV1Parser::RuleProgram;
}

void ClythV1Parser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ClythV1Parser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any ClythV1Parser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ClythV1Visitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ClythV1Parser::ProgramContext* ClythV1Parser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ClythV1Parser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(151);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -322007373173233210) != 0)) {
      setState(148);
      topLevelItem();
      setState(153);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(154);
    match(ClythV1Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelItemContext ------------------------------------------------------------------

ClythV1Parser::TopLevelItemContext::TopLevelItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ClythV1Parser::IncludeDeclContext* ClythV1Parser::TopLevelItemContext::includeDecl() {
  return getRuleContext<ClythV1Parser::IncludeDeclContext>(0);
}

ClythV1Parser::ExternDeclContext* ClythV1Parser::TopLevelItemContext::externDecl() {
  return getRuleContext<ClythV1Parser::ExternDeclContext>(0);
}

ClythV1Parser::StructDeclContext* ClythV1Parser::TopLevelItemContext::structDecl() {
  return getRuleContext<ClythV1Parser::StructDeclContext>(0);
}

ClythV1Parser::MethodBlockContext* ClythV1Parser::TopLevelItemContext::methodBlock() {
  return getRuleContext<ClythV1Parser::MethodBlockContext>(0);
}

ClythV1Parser::FunctionDeclContext* ClythV1Parser::TopLevelItemContext::functionDecl() {
  return getRuleContext<ClythV1Parser::FunctionDeclContext>(0);
}

ClythV1Parser::MethodDeclContext* ClythV1Parser::TopLevelItemContext::methodDecl() {
  return getRuleContext<ClythV1Parser::MethodDeclContext>(0);
}

ClythV1Parser::StatementContext* ClythV1Parser::TopLevelItemContext::statement() {
  return getRuleContext<ClythV1Parser::StatementContext>(0);
}


size_t ClythV1Parser::TopLevelItemContext::getRuleIndex() const {
  return ClythV1Parser::RuleTopLevelItem;
}

void ClythV1Parser::TopLevelItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevelItem(this);
}

void ClythV1Parser::TopLevelItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevelItem(this);
}


std::any ClythV1Parser::TopLevelItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ClythV1Visitor*>(visitor))
    return parserVisitor->visitTopLevelItem(this);
  else
    return visitor->visitChildren(this);
}

ClythV1Parser::TopLevelItemContext* ClythV1Parser::topLevelItem() {
  TopLevelItemContext *_localctx = _tracker.createInstance<TopLevelItemContext>(_ctx, getState());
  enterRule(_localctx, 2, ClythV1Parser::RuleTopLevelItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(163);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(156);
      includeDecl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(157);
      externDecl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(158);
      structDecl();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(159);
      methodBlock();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(160);
      functionDecl();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(161);
      methodDecl();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(162);
      statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeDeclContext ------------------------------------------------------------------

ClythV1Parser::IncludeDeclContext::IncludeDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ClythV1Parser::IncludeDeclContext::INCLUDE() {
  return getToken(ClythV1Parser::INCLUDE, 0);
}

ClythV1Parser::IncludeTargetContext* ClythV1Parser::IncludeDeclContext::includeTarget() {
  return getRuleContext<ClythV1Parser::IncludeTargetContext>(0);
}

tree::TerminalNode* ClythV1Parser::IncludeDeclContext::SEMI() {
  return getToken(ClythV1Parser::SEMI, 0);
}


size_t ClythV1Parser::IncludeDeclContext::getRuleIndex() const {
  return ClythV1Parser::RuleIncludeDecl;
}

void ClythV1Parser::IncludeDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIncludeDecl(this);
}

void ClythV1Parser::IncludeDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIncludeDecl(this);
}


std::any ClythV1Parser::IncludeDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ClythV1Visitor*>(visitor))
    return parserVisitor->visitIncludeDecl(this);
  else
    return visitor->visitChildren(this);
}

ClythV1Parser::IncludeDeclContext* ClythV1Parser::includeDecl() {
  IncludeDeclContext *_localctx = _tracker.createInstance<IncludeDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, ClythV1Parser::RuleIncludeDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(165);
    match(ClythV1Parser::INCLUDE);
    setState(166);
    includeTarget();
    setState(168);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ClythV1Parser::SEMI) {
      setState(167);
      match(ClythV1Parser::SEMI);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeTargetContext ------------------------------------------------------------------

ClythV1Parser::IncludeTargetContext::IncludeTargetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ClythV1Parser::IncludeTargetContext::IDENTIFIER() {
  return getToken(ClythV1Parser::IDENTIFIER, 0);
}

tree::TerminalNode* ClythV1Parser::IncludeTargetContext::STRING_LITERAL() {
  return getToken(ClythV1Parser::STRING_LITERAL, 0);
}

tree::TerminalNode* ClythV1Parser::IncludeTargetContext::TEMPLATE_STRING_LITERAL() {
  return getToken(ClythV1Parser::TEMPLATE_STRING_LITERAL, 0);
}


size_t ClythV1Parser::IncludeTargetContext::getRuleIndex() const {
  return ClythV1Parser::RuleIncludeTarget;
}

void ClythV1Parser::IncludeTargetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIncludeTarget(this);
}

void ClythV1Parser::IncludeTargetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIncludeTarget(this);
}


std::any ClythV1Parser::IncludeTargetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ClythV1Visitor*>(visitor))
    return parserVisitor->visitIncludeTarget(this);
  else
    return visitor->visitChildren(this);
}

ClythV1Parser::IncludeTargetContext* ClythV1Parser::includeTarget() {
  IncludeTargetContext *_localctx = _tracker.createInstance<IncludeTargetContext>(_ctx, getState());
  enterRule(_localctx, 6, ClythV1Parser::RuleIncludeTarget);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(170);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -2305843009213693952) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExternDeclContext ------------------------------------------------------------------

ClythV1Parser::ExternDeclContext::ExternDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ClythV1Parser::ExternDeclContext::EXTERN() {
  return getToken(ClythV1Parser::EXTERN, 0);
}

ClythV1Parser::TypeContext* ClythV1Parser::ExternDeclContext::type() {
  return getRuleContext<ClythV1Parser::TypeContext>(0);
}

tree::TerminalNode* ClythV1Parser::ExternDeclContext::IDENTIFIER() {
  return getToken(ClythV1Parser::IDENTIFIER, 0);
}

tree::TerminalNode* ClythV1Parser::ExternDeclContext::LPAREN() {
  return getToken(ClythV1Parser::LPAREN, 0);
}

tree::TerminalNode* ClythV1Parser::ExternDeclContext::RPAREN() {
  return getToken(ClythV1Parser::RPAREN, 0);
}

ClythV1Parser::ExternAbiContext* ClythV1Parser::ExternDeclContext::externAbi() {
  return getRuleContext<ClythV1Parser::ExternAbiContext>(0);
}

ClythV1Parser::ExternParamListContext* ClythV1Parser::ExternDeclContext::externParamList() {
  return getRuleContext<ClythV1Parser::ExternParamListContext>(0);
}

tree::TerminalNode* ClythV1Parser::ExternDeclContext::SEMI() {
  return getToken(ClythV1Parser::SEMI, 0);
}


size_t ClythV1Parser::ExternDeclContext::getRuleIndex() const {
  return ClythV1Parser::RuleExternDecl;
}

void ClythV1Parser::ExternDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExternDecl(this);
}

void ClythV1Parser::ExternDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExternDecl(this);
}


std::any ClythV1Parser::ExternDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ClythV1Visitor*>(visitor))
    return parserVisitor->visitExternDecl(this);
  else
    return visitor->visitChildren(this);
}

ClythV1Parser::ExternDeclContext* ClythV1Parser::externDecl() {
  ExternDeclContext *_localctx = _tracker.createInstance<ExternDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, ClythV1Parser::RuleExternDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(172);
    match(ClythV1Parser::EXTERN);
    setState(174);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(173);
      externAbi();
      break;
    }

    default:
      break;
    }
    setState(176);
    type();
    setState(177);
    match(ClythV1Parser::IDENTIFIER);
    setState(178);
    match(ClythV1Parser::LPAREN);
    setState(180);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -8358680908399640448) != 0)) {
      setState(179);
      externParamList();
    }
    setState(182);
    match(ClythV1Parser::RPAREN);
    setState(184);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ClythV1Parser::SEMI) {
      setState(183);
      match(ClythV1Parser::SEMI);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExternAbiContext ------------------------------------------------------------------

ClythV1Parser::ExternAbiContext::ExternAbiContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ClythV1Parser::ExternAbiContext::C_ABI() {
  return getToken(ClythV1Parser::C_ABI, 0);
}

tree::TerminalNode* ClythV1Parser::ExternAbiContext::IDENTIFIER() {
  return getToken(ClythV1Parser::IDENTIFIER, 0);
}


size_t ClythV1Parser::ExternAbiContext::getRuleIndex() const {
  return ClythV1Parser::RuleExternAbi;
}

void ClythV1Parser::ExternAbiContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExternAbi(this);
}

void ClythV1Parser::ExternAbiContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ClythV1Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExternAbi(this);
}

